--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <label for="brushSize">Pinselgröße:</label>
         <input type="range" id="brushSize" min="1" max="50" value="5">
         <button id="clearButton">Leinwand löschen</button>
+        <label for="imageUpload">Bild hochladen:</label>
+        <input type="file" id="imageUpload" accept="image/*">
     </div>
     <script src="script.js"></script>
 </body>
