--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
+
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cyperking5</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cyperking5 Snake</title>
   <style>
     body {
       margin: 0;
       background: black;
-      color: #00ffee;
-      font-family: 'Courier New', Courier, monospace;
+      color: white;
+      font-family: monospace;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
     h1 {
+      margin: 20px 0 0 0;
       font-size: 3rem;
-      margin: 20px 0 0;
+      color: #00ffee;
       text-shadow: 0 0 10px #00ffee;
     }
     .snake-title {
       display: flex;
       justify-content: center;
       font-size: 2rem;
-      margin-bottom: 10px;
+      margin-top: -10px;
+      margin-bottom: 20px;
     }
     .snake-title span {
-      animation: snakeWave 1s infinite ease-in-out;
+      color: #00ffee;
       text-shadow: 0 0 10px #00ffee;
+      animation: snakeWave 1s infinite ease-in-out;
     }
     .snake-title span:nth-child(1) { animation-delay: 0s; }
     .snake-title span:nth-child(3) { animation-delay: 0.1s; }
@@ -41,8 +45,7 @@
     }
 
     canvas {
-      background: #111;
-      margin: 10px 0;
+      border: 2px solid #00ffee;
     }
   </style>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5310734846855331"
@@ -56,8 +59,8 @@
   </div>
   <canvas id="game" width="400" height="400"></canvas>
 
-  <!-- AdSense Banner unten -->
-  <div style="width:100%; max-width: 400px;">
+  <!-- AdMob unten -->
+  <div style="margin-top:20px;">
     <ins class="adsbygoogle"
          style="display:block"
          data-ad-client="ca-pub-5310734846855331"
