--- a/datenschutz.html
+++ b/datenschutz.html
@@ -26,8 +26,8 @@
 
   <h2>1. Responsible Entity</h2>
   <p>
-    <strong>Name:</strong> Max Mustermann<br />
-    <strong>Email:</strong> kontakt@example.com<br />
+    <strong>Name:</strong> Cyperking5 <br />
+    <strong>Email:</strong> cyperking5@gmail.com <br />
     <strongPurpose:</strong> Entertainment / Prank Simulation App
   </p>
 
