--- a/feedback.html
+++ b/feedback.html
@@ -1,52 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AdBlocker Feedback</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5310734846855331" crossorigin="anonymous"></script>
   <style>
     body {
-      font-family: "Segoe UI", sans-serif;
-      background-color: #f7f8fa;
       margin: 0;
-      padding: 40px 20px;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f5f7;
+      color: #111;
       display: flex;
       justify-content: center;
-      align-items: flex-start;
-      min-height: 100vh;
+      padding: 40px 12px;
     }
 
     .container {
-      background: white;
       max-width: 600px;
       width: 100%;
-      padding: 30px;
+      background: white;
+      padding: 24px;
       border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 5px 20px rgba(0,0,0,0.1);
       text-align: center;
     }
 
     h1 {
-      margin-bottom: 0.5em;
-      color: #111827;
+      font-size: 1.6rem;
+      margin-bottom: 8px;
     }
 
-    p {
-      color: #4b5563;
-      margin-bottom: 1.5em;
+    .rating {
+      display: flex;
+      justify-content: center;
+      gap: 6px;
+      margin: 16px 0;
+    }
+
+    .star {
+      font-size: 24px;
+      cursor: pointer;
+      color: #ccc;
+      transition: color 0.2s;
+    }
+
+    .star.selected {
+      color: #FFD700;
     }
 
     textarea {
       width: 100%;
+      max-width: 500px;
       padding: 12px;
       font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 8px;
       resize: vertical;
+      margin: 12px auto;
+      display: block;
     }
 
     button {
-      margin-top: 12px;
-      padding: 12px 24px;
+      margin: 12px auto;
+      display: block;
+      padding: 10px 20px;
       background-color: #3b82f6;
       color: white;
       border: none;
@@ -60,149 +78,130 @@
       background-color: #2563eb;
     }
 
-    .stars {
-      display: flex;
-      justify-content: center;
-      gap: 8px;
-      margin-bottom: 1em;
-    }
-
-    .star {
-      font-size: 2rem;
-      color: #d1d5db;
-      cursor: pointer;
-      transition: color 0.2s;
-    }
-
-    .star:hover,
-    .star.selected {
-      color: gold;
-    }
-
     .feedback-item {
-      text-align: left;
-      border-top: 1px solid #e5e7eb;
-      padding: 15px 0;
+      text-align: center;
+      margin-bottom: 16px;
+      padding: 8px 12px;
+      background: #f9f9f9;
+      border-radius: 8px;
     }
 
     .ads {
-      margin-bottom: 24px;
+      margin: 24px auto;
     }
 
-    small {
-      color: #6b7280;
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #111;
+        color: #f4f4f4;
+      }
+      .container {
+        background-color: #1e1e1e;
+        color: #f4f4f4;
+      }
+      textarea, button {
+        background-color: #2c2c2c;
+        color: #f4f4f4;
+        border-color: #555;
+      }
+      .feedback-item {
+        background-color: #2c2c2c;
+      }
     }
   </style>
-
-  <!-- Google AdSense -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5310734846855331"
-     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
-    
-    <!-- Werbung oben -->
-    <div class="ads">
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-5310734846855331"
-           data-ad-slot="4934458362"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <script>
-           (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-
     <h1>Welcome to AdBlocker Feedback</h1>
     <p>Let us know what you think. Rate us and leave a comment below.</p>
 
-    <div class="stars" id="rating">
-      <span class="star" data-value="1">&#9733;</span>
-      <span class="star" data-value="2">&#9733;</span>
-      <span class="star" data-value="3">&#9733;</span>
-      <span class="star" data-value="4">&#9733;</span>
-      <span class="star" data-value="5">&#9733;</span>
+    <div class="rating" id="starRating">
+      <span class="star" data-value="1">★</span>
+      <span class="star" data-value="2">★</span>
+      <span class="star" data-value="3">★</span>
+      <span class="star" data-value="4">★</span>
+      <span class="star" data-value="5">★</span>
     </div>
 
-    <textarea id="comment" rows="4" placeholder="Your comment..."></textarea><br>
+    <textarea id="comment" placeholder="Your comment..."></textarea>
     <button onclick="submitFeedback()">Submit Feedback</button>
 
-    <div id="feedback-list">
-      <h2 style="margin-top: 2em;">Recent Feedback</h2>
+    <div class="ads">
+      <!-- AdSense Block -->
+      <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-5310734846855331"
+          data-ad-slot="4934458362"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
+
+    <h3>Recent Feedback</h3>
+    <div id="feedbackList"></div>
   </div>
 
-  <!-- Firebase Modular SDK -->
+  <!-- Firebase SDKs -->
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getDatabase, ref, push, get, child } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCfS9qn-B8MZx8gHs7a_TiU8TY5LROeFCA",
       authDomain: "adblocker-feedback.firebaseapp.com",
       databaseURL: "https://adblocker-feedback-default-rtdb.europe-west1.firebasedatabase.app",
       projectId: "adblocker-feedback",
-      storageBucket: "adblocker-feedback.firebasestorage.app",
+      storageBucket: "adblocker-feedback.appspot.com",
       messagingSenderId: "504023672779",
-      appId: "1:504023672779:web:cf6a9fd51a8f870ae7384e",
-      measurementId: "G-DHFRDS6E62"
+      appId: "1:504023672779:web:cf6a9fd51a8f870ae7384e"
     };
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
+    const feedbackRef = ref(db, 'feedback');
 
     let selectedRating = 0;
 
     document.querySelectorAll('.star').forEach(star => {
-      star.addEventListener('click', function () {
-        selectedRating = this.getAttribute('data-value');
-        document.querySelectorAll('.star').forEach(s => s.classList.remove('selected'));
-        for (let i = 0; i < selectedRating; i++) {
-          document.querySelectorAll('.star')[i].classList.add('selected');
-        }
+      star.addEventListener('click', () => {
+        selectedRating = parseInt(star.dataset.value);
+        updateStars(selectedRating);
       });
     });
 
-    window.submitFeedback = function () {
+    function updateStars(rating) {
+      document.querySelectorAll('.star').forEach(star => {
+        star.classList.toggle('selected', parseInt(star.dataset.value) <= rating);
+      });
+    }
+
+    function submitFeedback() {
       const comment = document.getElementById('comment').value.trim();
       if (selectedRating === 0 || comment === '') {
-        alert('Please enter a rating and a comment.');
+        alert("Please add a comment and select a rating.");
         return;
       }
-
-      push(ref(db, 'feedbacks'), {
+      const feedback = {
+        comment,
         rating: selectedRating,
-        comment: comment,
-        created_at: new Date().toISOString()
-      }).then(() => {
-        document.getElementById('comment').value = '';
-        selectedRating = 0;
-        document.querySelectorAll('.star').forEach(s => s.classList.remove('selected'));
-        loadFeedback();
-      });
+        timestamp: new Date().toLocaleString()
+      };
+      push(feedbackRef, feedback);
+      document.getElementById('comment').value = '';
+      updateStars(0);
+      selectedRating = 0;
     }
 
-    function loadFeedback() {
-      get(child(ref(db), 'feedbacks')).then(snapshot => {
-        const feedbackList = document.getElementById('feedback-list');
-        feedbackList.innerHTML = '<h2>Recent Feedback</h2>';
-        const data = snapshot.val();
-        if (!data) return;
-        Object.values(data).reverse().forEach(item => {
-          const div = document.createElement('div');
-          div.className = 'feedback-item';
-          div.innerHTML = `
-            <div class="stars">${'&#9733;'.repeat(item.rating)}${'&#9734;'.repeat(5 - item.rating)}</div>
-            <div>${item.comment}</div>
-            <small>${new Date(item.created_at).toLocaleString()}</small>
-          `;
-          feedbackList.appendChild(div);
-        });
-      });
-    }
-
-    window.onload = loadFeedback;
+    const feedbackList = document.getElementById('feedbackList');
+    onChildAdded(feedbackRef, (data) => {
+      const item = data.val();
+      const div = document.createElement('div');
+      div.className = 'feedback-item';
+      div.innerHTML = `<p>${item.comment}</p><p>${'★'.repeat(item.rating)}</p><small>${item.timestamp}</small>`;
+      feedbackList.prepend(div);
+    });
   </script>
 </body>
 </html>
